# stomatal-optimiaztion

./: .gitignore  AGENTS.md  Phytoritas.md  README.md  pyproject.toml
.github/: pull_request_template.md
.rah/: setup-scope.json
docs/: canonical_io.md  legacy_name_mapping.md  variable_glossary.md
scripts/: GitHubProject.Common.ps1  New-GitHubIssueBranch.ps1  New-GitHubPullRequest.ps1  Set-GitHubProjectField.ps1  Set-GitHubProjectStatus.ps1  Sync-GitHubLabels.ps1  build_knu_rootzone_aligned_fixture.py  build_knu_rootzone_sanitized.py  build_preprocess_compare_viewer.py  import_traitenv_dataset_candidates.py  make_features.py  plot_allocation_compare_png.py  plot_simulation_png.py  prepare_knu_longrun_validation.py  prepare_traitenv_school_validation.py  preprocess_compare_server.py  preprocess_incremental.py  real_data_benchmark.py  render_gosm_control_example.py  render_gosm_manuscript_panels.py  render_gosm_sensitivity_figures.py  render_root_rerun_parity_figures.py  render_tdgm_example_figures.py  render_thorp_example_figures.py  run_pipeline.py  run_tomics_allocation_factorial.py  run_tomics_current_vs_promoted_factorial.py  run_tomics_factorial.py  run_tomics_haf_cross_dataset_gate.py  run_tomics_haf_evidence_package.py  run_tomics_haf_harvest_family_factorial.py  run_tomics_haf_input_schema_audit.py  run_tomics_haf_latent_allocation.py  run_tomics_haf_observer_pipeline.py  run_tomics_haf_plotkit_bundle_manifest.py  run_tomics_haf_promotion_gate.py  run_tomics_knu_calibration.py  run_tomics_knu_harvest_family_factorial.py  run_tomics_knu_identifiability.py  (+10 more)
(+1057 files in other folders)
