[project]
name = "stomatal-optimiaztion"
version = "0.1.0"
description = "Plant modeling project"
authors = [
    {name = "Pytoritas",email = "phmoon08@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ruff = "^0.15.5"

