[project]
name = "stomatal-optimiaztion"
version = "0.1.0"
description = "Plant modeling project"
authors = [
    {name = "Pytoritas",email = "phmoon08@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.26,<3.0",
    "netcdf4 (>=1.7.4,<2.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "stomatal_optimiaztion", from = "src" }]
include = ["src/stomatal_optimiaztion/domains/thorp/model_card/*.json"]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ruff = "^0.15.5"

